<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/beginGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/optionsContainer"
        style="@style/Form"
        app:layout_constraintStart_toStartOf="@id/beginGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/FormHintTextView"
            android:text="@string/options"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_boxes_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <Spinner
            android:id="@+id/boxCountSpinner"
            style="@style/DefaultSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/hintTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/enableTimerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/enable_timer"
            app:layout_constraintTop_toTopOf="@id/boxCountSpinner"
            app:layout_constraintBottom_toBottomOf="@id/boxCountSpinner"
            app:layout_constraintStart_toEndOf="@id/boxCountSpinner"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="@id/optionsContainer"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@id/optionsContainer"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toTopOf="@id/confirmButton"
        app:layout_constraintStart_toStartOf="@id/optionsContainer"
        app:layout_constraintEnd_toStartOf="@id/confirmButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>