<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/doneImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_done"
        android:contentDescription="@string/done_icon"
        app:tint="@color/purple_700"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/doneTextView"/>

    <TextView
        android:id="@+id/doneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@id/doneImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toMainMenuButton"/>

    <Button
        android:id="@+id/toMainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_main_menu"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/doneTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>