<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/beginGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aboutContainer"
        style="@style/Form"
        app:layout_constraintStart_toStartOf="@id/beginGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/FormHintTextView"
            android:text="@string/about_the_application"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/application_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/versionHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameHintTextView" />

        <TextView
            android:id="@+id/versionCodeHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/version_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/versionHintTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="versionCodeHintTextView,versionCodeHintTextView,nameHintTextView"/>

        <TextView
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_navigation_example"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/nameHintTextView" />

        <TextView
            android:id="@+id/versionNameTextView"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1.0.0"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/versionHintTextView" />

        <TextView
            android:id="@+id/versionCodeTextView"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/versionCodeHintTextView" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@android:string/ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/versionCodeHintTextView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>